// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> when popover is closed renders correctly 1`] = `
<div>
  <OnClickOutside(Base)
    eventTypes={
      Array [
        "mousedown",
        "touchstart",
      ]
    }
    excludeScrollbar={false}
    outsideClickIgnoreClass="ignore-react-onclickoutside"
    preventDefault={false}
    stopPropagation={false}
  >
    <Base
      disableOnClickOutside={[Function]}
      enableOnClickOutside={[Function]}
      eventTypes={
        Array [
          "mousedown",
          "touchstart",
        ]
      }
      outsideClickIgnoreClass="ignore-react-onclickoutside"
      preventDefault={false}
      stopPropagation={false}
      zIndex={1}
    >
      <Manager>
        <Reference>
          <InnerReference
            getReferenceRef={[Function]}
          >
            <Box
              innerRef={[Function]}
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "w",
                    "fontSize",
                    "f",
                    "color",
                    "bg",
                    "fontFamily",
                    "font",
                    "textAlign",
                    "align",
                    "lineHeight",
                    "fontWeight",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "alignItems",
                    "alignContent",
                    "justifyContent",
                    "justify",
                    "flexWrap",
                    "wrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "background",
                    "backgroundImage",
                    "bgImage",
                    "backgroundSize",
                    "bgSize",
                    "backgroundPosition",
                    "bgPosition",
                    "backgroundRepeat",
                    "bgRepeat",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "hover",
                    "focus",
                    "active",
                    "disabledStyle",
                    "textStyle",
                    "colors",
                    "buttonStyle",
                    "borderWidth",
                  ]
                }
                className=""
                innerRef={[Function]}
                is="div"
              >
                <div
                  className=""
                >
                  <button
                    disabled={false}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                  >
                    Open popover
                  </button>
                </div>
              </Clean.div>
            </Box>
          </InnerReference>
        </Reference>
      </Manager>
    </Base>
  </OnClickOutside(Base)>
</div>
`;

exports[`<Popover /> when popover is open renders correctly 1`] = `
.c0 {
  z-index: 1;
  margin: 0.75rem;
  background: #F4F5F6;
  border: 2px solid #DADADA;
}

.c2 {
  height: 0;
  width: 0;
  border: solid transparent;
  border-width: 0.75rem;
  position: absolute;
}

.c1 {
  height: 0;
  width: 0;
  border: solid transparent;
  border-width: 0.75rem;
  position: absolute;
}

<div>
  <OnClickOutside(Base)
    eventTypes={
      Array [
        "mousedown",
        "touchstart",
      ]
    }
    excludeScrollbar={false}
    outsideClickIgnoreClass="ignore-react-onclickoutside"
    preventDefault={false}
    stopPropagation={false}
  >
    <Base
      disableOnClickOutside={[Function]}
      enableOnClickOutside={[Function]}
      eventTypes={
        Array [
          "mousedown",
          "touchstart",
        ]
      }
      outsideClickIgnoreClass="ignore-react-onclickoutside"
      preventDefault={false}
      stopPropagation={false}
      zIndex={1}
    >
      <Manager>
        <Reference>
          <InnerReference
            getReferenceRef={[Function]}
          >
            <Box
              innerRef={[Function]}
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "w",
                    "fontSize",
                    "f",
                    "color",
                    "bg",
                    "fontFamily",
                    "font",
                    "textAlign",
                    "align",
                    "lineHeight",
                    "fontWeight",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "alignItems",
                    "alignContent",
                    "justifyContent",
                    "justify",
                    "flexWrap",
                    "wrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "background",
                    "backgroundImage",
                    "bgImage",
                    "backgroundSize",
                    "bgSize",
                    "backgroundPosition",
                    "bgPosition",
                    "backgroundRepeat",
                    "bgRepeat",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "hover",
                    "focus",
                    "active",
                    "disabledStyle",
                    "textStyle",
                    "colors",
                    "buttonStyle",
                    "borderWidth",
                  ]
                }
                className=""
                innerRef={[Function]}
                is="div"
              >
                <div
                  className=""
                >
                  <button
                    disabled={true}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                  >
                    Open popover
                  </button>
                </div>
              </Clean.div>
            </Box>
          </InnerReference>
        </Reference>
        <Popper>
          <InnerPopper
            eventsEnabled={true}
            placement="bottom"
            positionFixed={false}
            referenceElement={
              <div
                class=""
              >
                <button
                  disabled=""
                >
                  Open popover
                </button>
              </div>
            }
          >
            <Box
              aria-hidden="true"
              className="ignore-react-onclickoutside"
              innerRef={[Function]}
              style={
                Object {
                  "left": 0,
                  "opacity": 0,
                  "pointerEvents": "none",
                  "position": "absolute",
                  "top": 0,
                }
              }
              zIndex={1}
            >
              <Clean.div
                aria-hidden="true"
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "w",
                    "fontSize",
                    "f",
                    "color",
                    "bg",
                    "fontFamily",
                    "font",
                    "textAlign",
                    "align",
                    "lineHeight",
                    "fontWeight",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "alignItems",
                    "alignContent",
                    "justifyContent",
                    "justify",
                    "flexWrap",
                    "wrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "background",
                    "backgroundImage",
                    "bgImage",
                    "backgroundSize",
                    "bgSize",
                    "backgroundPosition",
                    "bgPosition",
                    "backgroundRepeat",
                    "bgRepeat",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "hover",
                    "focus",
                    "active",
                    "disabledStyle",
                    "textStyle",
                    "colors",
                    "buttonStyle",
                    "borderWidth",
                  ]
                }
                className="ignore-react-onclickoutside c0"
                innerRef={[Function]}
                is="div"
                style={
                  Object {
                    "left": 0,
                    "opacity": 0,
                    "pointerEvents": "none",
                    "position": "absolute",
                    "top": 0,
                  }
                }
                zIndex={1}
              >
                <div
                  aria-hidden="true"
                  className="ignore-react-onclickoutside c0"
                  style={
                    Object {
                      "left": 0,
                      "opacity": 0,
                      "pointerEvents": "none",
                      "position": "absolute",
                      "top": 0,
                    }
                  }
                >
                  <p
                    key=".1"
                  >
                    Popover contents
                  </p>
                  <Box
                    innerRef={[Function]}
                    style={Object {}}
                  >
                    <Clean.div
                      blacklist={
                        Array [
                          "m",
                          "mt",
                          "mr",
                          "mb",
                          "ml",
                          "mx",
                          "my",
                          "p",
                          "pt",
                          "pr",
                          "pb",
                          "pl",
                          "px",
                          "py",
                          "width",
                          "w",
                          "fontSize",
                          "f",
                          "color",
                          "bg",
                          "fontFamily",
                          "font",
                          "textAlign",
                          "align",
                          "lineHeight",
                          "fontWeight",
                          "letterSpacing",
                          "display",
                          "maxWidth",
                          "minWidth",
                          "height",
                          "maxHeight",
                          "minHeight",
                          "size",
                          "ratio",
                          "alignItems",
                          "alignContent",
                          "justifyContent",
                          "justify",
                          "flexWrap",
                          "wrap",
                          "flexBasis",
                          "flexDirection",
                          "flex",
                          "justifySelf",
                          "alignSelf",
                          "order",
                          "gridGap",
                          "gridColumnGap",
                          "gridRowGap",
                          "gridColumn",
                          "gridRow",
                          "gridAutoFlow",
                          "gridAutoColumns",
                          "gridAutoRows",
                          "gridTemplateColumns",
                          "gridTemplateRows",
                          "border",
                          "borderTop",
                          "borderRight",
                          "borderBottom",
                          "borderLeft",
                          "borderColor",
                          "borderRadius",
                          "boxShadow",
                          "background",
                          "backgroundImage",
                          "bgImage",
                          "backgroundSize",
                          "bgSize",
                          "backgroundPosition",
                          "bgPosition",
                          "backgroundRepeat",
                          "bgRepeat",
                          "position",
                          "zIndex",
                          "top",
                          "right",
                          "bottom",
                          "left",
                          "hover",
                          "focus",
                          "active",
                          "disabledStyle",
                          "textStyle",
                          "colors",
                          "buttonStyle",
                          "borderWidth",
                        ]
                      }
                      className="c1"
                      innerRef={[Function]}
                      is="div"
                      style={Object {}}
                    >
                      <div
                        className="c1"
                        style={Object {}}
                      />
                    </Clean.div>
                  </Box>
                  <Box
                    innerRef={[Function]}
                    style={Object {}}
                  >
                    <Clean.div
                      blacklist={
                        Array [
                          "m",
                          "mt",
                          "mr",
                          "mb",
                          "ml",
                          "mx",
                          "my",
                          "p",
                          "pt",
                          "pr",
                          "pb",
                          "pl",
                          "px",
                          "py",
                          "width",
                          "w",
                          "fontSize",
                          "f",
                          "color",
                          "bg",
                          "fontFamily",
                          "font",
                          "textAlign",
                          "align",
                          "lineHeight",
                          "fontWeight",
                          "letterSpacing",
                          "display",
                          "maxWidth",
                          "minWidth",
                          "height",
                          "maxHeight",
                          "minHeight",
                          "size",
                          "ratio",
                          "alignItems",
                          "alignContent",
                          "justifyContent",
                          "justify",
                          "flexWrap",
                          "wrap",
                          "flexBasis",
                          "flexDirection",
                          "flex",
                          "justifySelf",
                          "alignSelf",
                          "order",
                          "gridGap",
                          "gridColumnGap",
                          "gridRowGap",
                          "gridColumn",
                          "gridRow",
                          "gridAutoFlow",
                          "gridAutoColumns",
                          "gridAutoRows",
                          "gridTemplateColumns",
                          "gridTemplateRows",
                          "border",
                          "borderTop",
                          "borderRight",
                          "borderBottom",
                          "borderLeft",
                          "borderColor",
                          "borderRadius",
                          "boxShadow",
                          "background",
                          "backgroundImage",
                          "bgImage",
                          "backgroundSize",
                          "bgSize",
                          "backgroundPosition",
                          "bgPosition",
                          "backgroundRepeat",
                          "bgRepeat",
                          "position",
                          "zIndex",
                          "top",
                          "right",
                          "bottom",
                          "left",
                          "hover",
                          "focus",
                          "active",
                          "disabledStyle",
                          "textStyle",
                          "colors",
                          "buttonStyle",
                          "borderWidth",
                        ]
                      }
                      className="c2"
                      innerRef={[Function]}
                      is="div"
                      style={Object {}}
                    >
                      <div
                        className="c2"
                        style={Object {}}
                      />
                    </Clean.div>
                  </Box>
                </div>
              </Clean.div>
            </Box>
          </InnerPopper>
        </Popper>
      </Manager>
    </Base>
  </OnClickOutside(Base)>
</div>
`;
